--- a/src/main/resources/fxml/Item.fxml
+++ b/src/main/resources/fxml/Item.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -32,15 +33,18 @@
             </HBox.margin>
         </Label>
       <Label fx:id="labelEndDate" prefHeight="17.0" prefWidth="90.0" text="22/10/2019" textFill="#393939" />
-        <Label fx:id="labelPreco" prefHeight="17.0" prefWidth="91.0" text="R$ 200,00" textFill="#393939">
+        <Label fx:id="labelPreco" prefHeight="17.0" prefWidth="70.0" text="R$ 200,00" textFill="#393939">
             <HBox.margin>
                 <Insets />
             </HBox.margin>
         </Label>
-        <Button fx:id="btnStatus" mnemonicParsing="false" prefHeight="10.0" prefWidth="60.0" style="-fx-border-color: #2A73FF; -fx-border-radius: 20; -fx-background-color: transparent;" stylesheets="@../styles/Styles.css" text="livre">
+        <Button fx:id="btnStatus" mnemonicParsing="false" prefHeight="10.0" prefWidth="80.0" styleClass="btn-round" text="reservado">
             <HBox.margin>
                 <Insets />
             </HBox.margin>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
         </Button>
     </children>
 </HBox>
