--- a/src/main/resources/fxml/Home.fxml
+++ b/src/main/resources/fxml/Home.fxml
@@ -192,7 +192,7 @@
                            <children>
                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Label styleClass="overview-number" text="150" textFill="#2a73ff">
+                                    <Label fx:id="labelQuartos" styleClass="overview-number" text="150" textFill="#2a73ff">
                                        <font>
                                           <Font name="System Bold" size="26.0" />
                                        </font>
@@ -202,7 +202,7 @@
                               </VBox>
                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Label styleClass="overview-number" text="100" textFill="#26bfbc">
+                                    <Label fx:id="labelOcupados" styleClass="overview-number" text="100" textFill="#26bfbc">
                                        <font>
                                           <Font name="System Bold" size="26.0" />
                                        </font>
@@ -212,7 +212,7 @@
                               </VBox>
                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Label styleClass="overview-number" text="50" textFill="#fa5f7e">
+                                    <Label fx:id="labelLivres" styleClass="overview-number" text="50" textFill="#fa5f7e">
                                        <font>
                                           <Font name="System Bold" size="26.0" />
                                        </font>
@@ -222,7 +222,7 @@
                               </VBox>
                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <Label styleClass="overview-number" text="20" textFill="#de0000">
+                                    <Label fx:id="labelReservas" styleClass="overview-number" text="20" textFill="#de0000">
                                        <font>
                                           <Font name="System Bold" size="26.0" />
                                        </font>
